--- a/test-ali.html
+++ b/test-ali.html
@@ -3,260 +3,130 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+    <title>TEst </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <style>
-        @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700');
-
         * {
-            padding: 0;
             margin: 0;
+            padding: 0;
             box-sizing: border-box;
         }
 
-        body {
-            font-family: 'Outfit', sans-serif;
+        .montserrat-counter-section {
+            font-family: "Montserrat", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
         }
 
-        html {
-            background-color: #eaf0f2;
-        }
-
-        header {
-            text-align: center;
-            padding-top: 100px;
-            margin-bottom: 300px;
-            font-size: 35px;
-        }
-
-        header h2 {
-            color: #f0525f;
-        }
-
-        header span {
-            color: #eaa03f;
-        }
-
-        /* The footer is fixed to the bottom of the page */
-        footer {
-            position: fixed;
-            bottom: 0;
+        #container-1,
+        #container-3 {
             width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        @media (max-height:800px) {
-            footer {
-                position: static;
-            }
-
-            header {
-                padding-top: 40px;
-            }
-        }
-
-        .footer-distributed {
-            background-color: #ffffff;
-            color: #000000;
+        #container-2 {
             width: 100%;
-            text-align: left;
-            font: bold 16px sans-serif;
-            padding: 50px 50px 60px 50px;
-            margin-top: 80px;
+            height: 65.875vh;
+            background-color: rgb(19 23 26);
+            color: white;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            padding-bottom: 1em;
+            background: url("img/photo/ricardo-gomez-angel-YtbasgItwyo-unsplash.jpg")no-repeat center center / cover;
         }
 
-        .footer-distributed .footer-left,
-        .footer-distributed .footer-center,
-        .footer-distributed .footer-right {
-            display: inline-block;
-            vertical-align: top;
+        .container-2-boxes {
+            display: flex;
+            flex-direction: row;
+            gap: 5px;
+            height: 20%;
+            width: 80%;
         }
 
-        /* Footer left */
-        .footer-distributed .footer-left {
-            width: 30%;
-        }
-		.footer-logo{
-			height: 5vh;
-			width: auto;
-		}
-
-        .footer-distributed .footer-logo {
-            margin-bottom: 20px;
-        }
-
-        /* Footer links */
-        .footer-distributed .footer-links {
-            color: #000000;
-            margin: 20px 0 12px;
+        .box {
+            position: relative;
+            backdrop-filter: blur(5px);
+            background-color: rgba(248, 248, 245, .8);
+            width: 100%;
+            height: 100%;
+            padding: 4px;
+            display: flex;
+            justify-content: space-between;
+            color: black;
+            overflow: hidden;
         }
 
-        .footer-distributed .footer-links a {
-            display: inline-block;
-            line-height: 1.8;
-            text-decoration: none;
-            color: inherit;
+        .box::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            /* Align the top of the pseudo-element with the middle of the box */
+            left: 3%;
+            /* Align the right edge of the pseudo-element with the right edge of the box */
+            transform: translateY(-50%);
+            /* Adjust to vertically center the pseudo-element */
+            width: 50px;
+            /* Adjust the width of the background image */
+            height: 50px;
+            /* Adjust the height of the background image */
+            background-size: cover;
+            z-index: -1;
         }
 
-        .footer-distributed .footer-company-name {
-            color: #8f9296;
-            font-size: 14px;
-            font-weight: normal;
-            margin: 0;
+
+        #box-1::before {
+            background: url("img/icons/groups_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
         }
 
-        /* Footer Center */
-        .footer-distributed .footer-center {
-            width: 35%;
+        #box-2::before {
+            background: url("img/icons/account_tree_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
         }
 
-        .footer-distributed .footer-center i {
-            background-color: #33383b;
-            color: #ffffff;
-            font-size: 25px;
-            width: 38px;
-            height: 38px;
-            border-radius: 50%;
-            text-align: center;
-            line-height: 38px;
-            margin: 10px 15px;
-            vertical-align: middle;
+        #box-3::before {
+            background: url("img/icons/trophy_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
         }
 
-        .footer-distributed .footer-center i.fa-envelope {
-            font-size: 17px;
-            line-height: 38px;
+        .box .counter {
+            font-weight: 400;
+            font-size: 1.8rem;
+            position: relative;
+            z-index: 1;
         }
 
-        .footer-distributed .footer-center p {
-            display: inline-block;
-            color: #000000;
-            vertical-align: middle;
-            margin: 0;
-        }
-
-        .footer-distributed .footer-center p span {
-            display: block;
-            font-weight: normal;
-            font-size: 14px;
-            line-height: 2;
-        }
-
-        .footer-distributed .footer-center p a {
-            color: #e0ac1c;
-            text-decoration: none;
-        }
-
-        /* Footer Right */
-        .footer-distributed .footer-right {
-            width: 30%;
-        }
-
-        .footer-distributed .footer-company-about {
-            line-height: 20px;
-            color: #92999f;
-            font-size: 13px;
-            font-weight: normal;
-            margin: 0;
-        }
-
-        .footer-distributed .footer-company-about span {
-            display: block;
-            color: #000000;
-            font-size: 18px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .footer-distributed .footer-icons {
-            margin-top: 25px;
-        }
-
-        .footer-distributed .footer-icons a {
-            display: inline-block;
-            width: 35px;
-            height: 35px;
-            cursor: pointer;
-            background-color: #33383b;
-            border-radius: 50%;
-            font-size: 20px;
-            color: #ffffff;
-            text-align: center;
-            line-height: 35px;
-            margin-right: 3px;
-            margin-bottom: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .footer-distributed .footer-icons a:hover,
-        .footer-distributed .footer-links a:hover {
-            color: #fbae19;
-            background-color: transparent;
-        }
-
-        @media (max-width: 880px) {
-            .footer-distributed .footer-left,
-            .footer-distributed .footer-center,
-            .footer-distributed .footer-right {
-                display: block;
-                width: 100%;
-                margin-bottom: 40px;
-                text-align: center;
-            }
-
-            .footer-distributed .footer-center i {
-                margin-left: 0;
-            }
+        .box .heading {
+            align-self: flex-end;
         }
     </style>
 </head>
 
 <body>
-    <header>
-        <h2>Welcome to My Website</h2>
-        <span>Your tagline here</span>
-    </header>
-
-    <footer class="footer-distributed">
-        <div class="footer-left">
-            <img src="img/base/FNF LOGO NEW.png" alt="Your Logo" class="footer-logo" width="100">
-            <p class="footer-links">
-                <a href="#">Home</a> |
-                <a href="#">About</a> |
-                <a href="#">Contact</a> |
-                <a href="#">Blog</a>
-            </p>
-            <p class="footer-company-name">Copyright © 2023 <strong>FoodOnFocus.com</strong> All rights reserved</p>
-        </div>
-        <div class="footer-center">
-            <div>
-                <i class="fa fa-map-marker"></i>
-                <p><span>Dubai</span> Qatar</p>
+    <div class="container" id="container-1">Hello</div>
+    <div class="container montserrat-counter-section" id="container-2">
+        <div class="container-2-boxes">
+            <div class="box" id="box-1">
+                <h2 class="counter">100</h2>
+                <span class="heading">Clients Served</span>
             </div>
-            <div>
-                <i class="fa fa-phone"></i>
-                <p>123456 78910</p>
+            <div class="box" id="box-2">
+                <h2 class="counter">200</h2>
+                <span class="heading">Projects</span>
             </div>
-            <div>
-                <i class="fa fa-envelope"></i>
-                <p><a href="mailto:sagar00001.co@gmail.com">xyz@gmail.com</a></p>
+            <div class="box" id="box-3">
+                <h2 class="counter">20</h2>
+                <span class="heading">Awards</span>
             </div>
         </div>
-        <div class="footer-right">
-            <p class="footer-company-about">
-                <span>About the company</span>
-                <strong>FoodonFocus</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima repellendus officia nam temporibus quia, at dicta voluptatum laborum distinctio aspernatur fuga in doloribus. Error, reiciendis quae nobis repellat in quibusdam?
-            </p>
-            <div class="footer-icons">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-youtube"></i></a>
-            </div>
-        </div>
-    </footer>
+    </div>
+    <div class="container" id="container-3">Hello</div>
 </body>
 
 </html>
