fonts updated to Monteserrat

--- a/home-1.html
+++ b/home-1.html
@@ -1178,31 +1178,23 @@
                                 </div>
                                 
                                 <div class="featured-work-tags">
-                                    <div class="big-but">
-                                        <a style="--clr: #7808d0" class="button2" href="#">
-                                            <span class="button2__icon-wrapper">
-                                                <svg width="10" class="button2__icon-svg" xmlns="http://www.w3.org/2000/svg" fill="none"
-                                                    viewBox="0 0 14 15">
-                                                    <path fill="currentColor"
-                                                        d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z">
-                                                    </path>
-                                                </svg>
-                
-                                                <svg class="button2__icon-svg  button2__icon-svg--copy"
-                                                    xmlns="http://www.w3.org/2000/svg" width="10" fill="none" viewBox="0 0 14 15">
-                                                    <path fill="currentColor"
-                                                        d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z">
-                                                    </path>
-                                                </svg>
-                                            </span>
-                                            View All Projects
-                                        </a>
-                                    </div>
                                     <span class="featured-work-tag">WEBSITE</span>
                                     <span class="featured-work-tag">LOGO</span>
                                 </div>
                             </div>
                             <div class="featured-work-box" id="feature-box-1">
+                                <div class="image-box">
+                                    <img src="img/works/1.jpg" class="featured-work-img" alt="">
+                                </div>
+                                <div class="work-head">
+                                    <h5 class="feature-work-name">SLINGSHOT</h5>
+                                </div>
+                                <div class="featured-work-tags">
+                                    <span class="featured-work-tag">WEBSITE</span>
+                                    <span class="featured-work-tag">LOGO</span>
+                                </div>
+                            </div>
+                            <!-- <div class="featured-work-box" id="feature-box-1">
                                 <div class="image-box">
                                     <img src="img/works/1.jpg" class="featured-work-img" alt="">
                                 </div>
@@ -1225,19 +1217,7 @@
                                     <span class="featured-work-tag">WEBSITE</span>
                                     <span class="featured-work-tag">LOGO</span>
                                 </div>
-                            </div>
-                            <div class="featured-work-box" id="feature-box-1">
-                                <div class="image-box">
-                                    <img src="img/works/1.jpg" class="featured-work-img" alt="">
-                                </div>
-                                <div class="work-head">
-                                    <h5 class="feature-work-name">SLINGSHOT</h5>
-                                </div>
-                                <div class="featured-work-tags">
-                                    <span class="featured-work-tag">WEBSITE</span>
-                                    <span class="featured-work-tag">LOGO</span>
-                                </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
