--- a/content.html
+++ b/content.html
@@ -308,7 +308,7 @@
 
                 <!-- section 2 -->
 
-                <!-- vertical image -->
+                <!-- vertical video -->
                 <section class="vertical-video">
                     <h2 id="gallerytxt" style="padding-top: 3px;">Top Rated!</h2>
                     <div class="container5">
@@ -346,7 +346,7 @@
                 </script>
 
 
-                <!-- vertical image -->
+                <!-- vertical videoo -->
 
 
 
