heading added in timeline home only

--- a/home-1.html
+++ b/home-1.html
@@ -1064,6 +1064,7 @@
                 <!-- blog end -->
 
                 <section class="section-vr-timeline">
+                    <h1 class="timeline-heading">OUR PROCESS</h1>
                     <div class="section-timeline">
                         <div class="container-1282">
                             <div class="timeline_component">
