--- a/test-ali.html
+++ b/test-ali.html
@@ -4,129 +4,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEst </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <title>Top Rated Works Slider</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        .montserrat-counter-section {
-            font-family: "Montserrat", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        #container-1,
-        #container-3 {
+        .slider-container {
             width: 100%;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #container-2 {
-            width: 100%;
-            height: 65.875vh;
-            background-color: rgb(19 23 26);
-            color: white;
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            padding-bottom: 1em;
-            background: url("img/photo/ricardo-gomez-angel-YtbasgItwyo-unsplash.jpg")no-repeat center center / cover;
-        }
-
-        .container-2-boxes {
-            display: flex;
-            flex-direction: row;
-            gap: 5px;
-            height: 20%;
-            width: 80%;
-        }
-
-        .box {
+            max-width: 800px;
+            margin: 0 auto;
             position: relative;
-            backdrop-filter: blur(5px);
-            background-color: rgba(248, 248, 245, .8);
-            width: 100%;
-            height: 100%;
-            padding: 4px;
+        }
+
+        .slider-title {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .slider-wrapper {
             display: flex;
-            justify-content: space-between;
-            color: black;
             overflow: hidden;
         }
 
-        .box::before {
-            content: '';
+        .slider-item {
+            flex: 1;
+            position: relative;
+        }
+
+        .slider-video {
+            width: 100%;
+            height: auto;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        .slider-item.active .slider-video {
+            opacity: 1;
+        }
+
+        .slider-item-content {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            transition: transform 0.5s ease-in-out;
+            transform: translateY(100%);
+        }
+
+        .slider-item.active .slider-item-content {
+            transform: translateY(0);
+        }
+
+        .slider-nav {
+            display: flex;
+            justify-content: space-between;
             position: absolute;
             top: 50%;
-            /* Align the top of the pseudo-element with the middle of the box */
-            left: 3%;
-            /* Align the right edge of the pseudo-element with the right edge of the box */
             transform: translateY(-50%);
-            /* Adjust to vertically center the pseudo-element */
-            width: 50px;
-            /* Adjust the width of the background image */
-            height: 50px;
-            /* Adjust the height of the background image */
-            background-size: cover;
-            z-index: -1;
+            z-index: 10;
         }
 
-
-        #box-1::before {
-            background: url("img/icons/groups_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
-        }
-
-        #box-2::before {
-            background: url("img/icons/account_tree_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
-        }
-
-        #box-3::before {
-            background: url("img/icons/trophy_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
-        }
-
-        .box .counter {
-            font-weight: 400;
-            font-size: 1.8rem;
-            position: relative;
-            z-index: 1;
-        }
-
-        .box .heading {
-            align-self: flex-end;
+        .slider-nav button {
+            background-color: transparent;
+            border: none;
+            color: black;
         }
     </style>
 </head>
 
 <body>
-    <div class="container" id="container-1">Hello</div>
-    <div class="container montserrat-counter-section" id="container-2">
-        <div class="container-2-boxes">
-            <div class="box" id="box-1">
-                <h2 class="counter">100</h2>
-                <span class="heading">Clients Served</span>
+    <div class="slider-container">
+        <h1 class="slider-title">Top Rated Works</h1>
+        <div class="slider-wrapper">
+            <div class="slider-item">
+                <video class="slider-video" src="video/vid1.mp4" muted controls width="100%" height="300"></video> <div class="slider-item-content">
+                    <h2>Video Title 1</h2>
+                    <p>Description of Video 1</p>
+                </div>
             </div>
-            <div class="box" id="box-2">
-                <h2 class="counter">200</h2>
-                <span class="heading">Projects</span>
+            <div class="slider-item">
+                <video class="slider-video" src="video/vid_2.mp4" muted controls width="100%" height="300"></video>
+                <div class="slider-item-content">
+                    <h2>Video Title 2</h2>
+                    <p>Description of Video 2</p>
+                </div>
             </div>
-            <div class="box" id="box-3">
-                <h2 class="counter">20</h2>
-                <span class="heading">Awards</span>
             </div>
+        <div class="slider-nav">
+            <button class="slider-prev">&lt;</button>
+            <button class="slider-next">&gt;</button>
         </div>
     </div>
-    <div class="container" id="container-3">Hello</div>
+    <script>
+        const sliderItems = document.querySelectorAll('.slider-item');
+        const sliderNavPrev = document.querySelector('.slider-prev');
+        const sliderNavNext = document.querySelector('.slider-next');
+
+        let currentSlide = 0; // Keep track of the currently active slide
+
+        // Function to show the specified slide
+        function showSlide(slideIndex) {
+            sliderItems.forEach((item, index) => {
+                item.classList.remove('active');
+                if (index === slideIndex) {
+                    item.classList.add('active');
+                }
+            });
+            currentSlide = slideIndex;
+        }
+
+        // Event listeners for navigation buttons
+        sliderNavPrev.addEventListener('click', () => {
+            currentSlide = (currentSlide - 1 + sliderItems.length) % sliderItems.length;
+            showSlide(currentSlide);
+        });
+
+        sliderNavNext.addEventListener('click', () => {
+            currentSlide = (currentSlide + 1) % sliderItems.length;
+            showSlide(currentSlide);
+        });
+
+        // Show the first slide initially
+        showSlide(currentSlide);
+
+    </script>
 </body>
 
 </html>
