slider issues solve-desighn page

--- a/design.html
+++ b/design.html
@@ -472,6 +472,7 @@
 
             <!-- timeline-start -->
             <section class="section-vr-timeline">
+                <h1 class="timeline-heading">OUR PROCESS</h1>
                 <div class="section-timeline">
                     <div class="container-1282">
                         <div class="timeline_component">
