--- a/consult.html
+++ b/consult.html
@@ -124,11 +124,11 @@
                                         <a class="mil-dark" href="content.html">Content Production</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="#.">Contact</a>
+                                        <a class="mil-dark" href="consult.html">Consult</a>
                                     </li>
-                                    <li class="mil-up mil-dark">
+                                    <!-- <li class="mil-up mil-dark">
                                         <a class="mil-dark" href="#.">Blog</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </nav>
 
