--- a/design.html
+++ b/design.html
@@ -122,7 +122,7 @@
                                         <a class="mil-dark" href="home-1.html">Home Page</a>
                                     </li>
                                     <li class="mil-up mil-active mil-dark">
-                                        <a class="" href="home-1.html">Branding & Design</a>
+                                        <a class="" href="design.html">Branding & Design</a>
                                     </li>
                                     <li class="mil-up mil-dark">
                                         <a class="mil-dark" href="content.html">Content Production</a>
