--- a/home-1.html
+++ b/home-1.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- fancybox css -->
@@ -68,7 +69,7 @@
         <!-- cursor end -->
 
         <!-- preloader -->
-        <div class="mil-preloader">
+        <!-- <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
                     <p class="mil-h3 mil-black mil-thin">Pioneering</p>
@@ -83,7 +84,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- preloader end -->
 
         <!-- scrollbar progress -->
@@ -1177,7 +1178,7 @@
                                 <div class="work-head">
                                     <h5 class="feature-work-name">SLINGSHOT</h5>
                                 </div>
-                                
+
                                 <div class="featured-work-tags">
                                     <span class="featured-work-tag">WEBSITE</span>
                                     <span class="featured-work-tag">LOGO</span>
@@ -1227,59 +1228,47 @@
 
 
 
-                <!-- contact -->
+                <!-- contact teaser-->
+                <div class="contact-teaser">
                 <!-- content -->
                 <div class="mil-content">
                     <div id="swupMain" class="mil-main-transition">
 
                         <!-- banner -->
+   
                         <div class="mil-inner-banner ">
                             <div class="mil-banner-content mil-center mil-up">
                                 <div class="container">
-                                    <!-- <ul class="mil-breadcrumbs mil-center mil-mb-60">
-                                        <li><a href="home-1.html">Homepage</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                    </ul> -->
                                     <h1 class="mil-mb-60 mil-maroon">Get in touch!</h1>
-                                    <!-- <a href="#contact" class="mil-link mil-maroon mil-arrow-place mil-down-arrow">
-                                <span>Send message</span>
-                            </a> -->
                                 </div>
                             </div>
                         </div>
-                        <!-- banner end -->
+
+
+                        <section class="Form-teaser">
+                        <div class="teaser-section">
+                            <div class="left-side">
+                                <img src="img/photo/contact-bg.webp" alt="Teaser Image" class="teaser-image">
+                                <div class="center-btn">
+                                <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
+                            </div>
+                            </div>
+                            <div class="right-side">
+                                <!-- <h2>Ready to Get Started?</h2> -->
+                                <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">We’re excited to connect with you. One click is all it takes to schedule a meeting with us and discuss your needs.</p>
+                                    <h1 class="primary-heading" style="color: #972221;    font-weight: 100;
+                                    word-spacing: 0px;">
+                                        Start your next
+                                        <br>
+                                        project<span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH US</span>
+                                    </h1>
+                            </div>
+                        </div>
+                    </section>
+                </div>
 
                         <!-- contact form -->
-                        <!-- <section id="contact">
-                            <div class="container mil-p-120-90">
-                                <h3 class="mil-center mil-up mil-mb-120">Let's <span class="mil-thin">Talk</span></h3>
-                                <form class="row align-items-center">
-                                    <div class="col-lg-6 mil-up">
-                                        <input type="text" placeholder="What's your name">
-                                    </div>
-                                    <div class="col-lg-6 mil-up">
-                                        <input type="email" placeholder="Your Email">
-                                    </div>
-                                    <div class="col-lg-12 mil-up">
-                                        <textarea placeholder="Tell us about our project"></textarea>
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <p class="mil-up mil-mb-30"><span class="mil-accent">*</span> We promise not to
-                                            disclose your personal information to third parties.</p>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="mil-adaptive-right mil-up mil-mb-30">
-                                            <button type="submit" class="mil-button mil-arrow-place">
-                                                <span>Send message</span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </section> -->
-
-
-                        <section id="contact-form-ss">
+                        <!-- <section id="contact-form-ss">
                             <div class="container-ss">
                                 <div class="image-container-ss">
                                     <img src="img/photo/contact-bg.webp" alt="">
@@ -1420,13 +1409,13 @@
                                         ">SUBMIT</button>
                                         </div>
                                     </form>
-                                    <!-- <label class="input">
+                                    <label class="input">
                                         <input class="input__field" type="text" placeholder=" " />
                                         <span class="input__label">Some Fancy Label</span>
-                                      </label>  -->
+                                      </label>  
                                 </div>
                             </div>
-                        </section>
+                        </section> -->
 
                         <!-- contact form end -->
 
@@ -1662,7 +1651,8 @@
 
                             <!-- Copyright -->
                             <div class="text-center" style="background-color: rgba(0, 0, 0, 0.05);">
-                                <p style="color: #972221;margin: 0;">&copy; <span id="copyrightYear"></span> foodonfocus.com | All
+                                <p style="color: #972221;margin: 0;">&copy; <span id="copyrightYear"></span>
+                                    foodonfocus.com | All
                                     rights reserved.</p>
                                 <script>
                                     var currentYear = new Date().getFullYear();
