--- a/home-1.html
+++ b/home-1.html
@@ -69,7 +69,7 @@
         <!-- cursor end -->
 
         <!-- preloader -->
-        <!-- <div class="mil-preloader">
+        <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
                     <p class="mil-h3 mil-black mil-thin">Pioneering</p>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- preloader end -->
 
         <!-- scrollbar progress -->
