featured works problem solved

--- a/consult.html
+++ b/consult.html
@@ -39,7 +39,8 @@
         <!-- page name -->
         <title>FoodOnFocus</title>
         <!-- icon -->
-        <link rel="icon" href="img/base/FNFico.ico" type="image/x-icon">
+        <link rel="icon" href="img/icons/fof-favicon.jfif" type="image/x-icon">
+
         <!-- fancybox -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
