--- a/home-1.html
+++ b/home-1.html
@@ -40,14 +40,7 @@
     <!-- page name -->
     <title>FoodOnFocus</title>
     <!-- icon -->
-    <link rel="icon" href="img/base/FNFico.ico" type="image/x-icon">
-
-    <style>
-        link[rel="icon"] {
-            width: 32px;
-            height: 32px;
-        }
-    </style>
+    <link rel="icon" href="img/icons/fof-favicon.jfif" type="image/x-icon">
 </head>
 
 <body>
@@ -595,7 +588,7 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0" id="service-2">
 
                                     <a href="service.html" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-maroon mil-mb-30 inter-mil-h5 hover-text-2">Branding and Design
+                                        <h5 class="mil-maroon mil-mb-30 inter-mil-h5 hover-text-2">Branding & Design
                                         </h5>
                                         <p class="mil-light-dark mil-mb-30">Our creative agency is a team of
                                             professionals
